--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "jade": "~1.11.0",
     "mongoose": "^4.6.0",
     "morgan": "~1.7.0",
+    "node-libcurl": "^1.0.0",
+    "node-rest-client": "^2.0.1",
     "serve-favicon": "~2.3.0",
     "sillyname": "^0.1.0",
     "xmlreader": "^0.2.3"
