--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-rest-client": "^2.0.1",
     "serve-favicon": "~2.3.0",
     "sillyname": "^0.1.0",
-    "xmlreader": "^0.2.3"
+    "xmlreader": "^0.2.3",
+    "express-fileupload":"^0.0.5"
   }
 }
