--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "express": "~4.13.4",
     "jade": "~1.11.0",
     "jquery": "^3.1.0",
+    "jquery-ui": "^1.12.1",
+    "jquery.cookie": "^1.4.1",
     "mongoose": "^4.6.0",
     "morgan": "~1.7.0",
     "nib": "^1.1.2",
